--- a/Final Test MAD 310/Base.lproj/Main.storyboard
+++ b/Final Test MAD 310/Base.lproj/Main.storyboard
@@ -109,7 +109,7 @@
             </objects>
             <point key="canvasLocation" x="-448" y="719"/>
         </scene>
-        <!--Graduation View Controller-->
+        <!--Future Is Bright-->
         <scene sceneID="z0d-Qc-LAn">
             <objects>
                 <viewController id="17v-oN-UCz" customClass="GraduationViewController" customModule="Final_Test_MAD_310" customModuleProvider="target" sceneMemberID="viewController">
@@ -117,15 +117,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gxi-EL-Ky6">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="400"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="TESTINGGGGG" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pCn-6B-Poa">
+                                <rect key="frame" x="148" y="566" width="119" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" image="myphoto.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="gxi-EL-Ky6">
+                                <rect key="frame" x="47" y="88" width="320" height="366.99999999999977"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="djM-dV-aMq"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <navigationItem key="navigationItem" id="XMe-NZ-PTZ"/>
+                    <navigationItem key="navigationItem" title="Future Is Bright" id="XMe-NZ-PTZ"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="t6e-xG-PwF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -135,6 +142,7 @@
     <resources>
         <image name="cart.circle" catalog="system" width="128" height="121"/>
         <image name="graduationcap.circle" catalog="system" width="128" height="121"/>
+        <image name="myphoto.jpg" width="640" height="640"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
