--- a/Final Test MAD 310/Base.lproj/Main.storyboard
+++ b/Final Test MAD 310/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Product List-->
         <scene sceneID="uqm-aU-RgR">
             <objects>
                 <tableViewController id="RRr-v1-bNv" customClass="ViewController" customModule="Final_Test_MAD_310" customModuleProvider="target" sceneMemberID="viewController">
@@ -48,7 +48,7 @@
                             <outlet property="delegate" destination="RRr-v1-bNv" id="q5V-2v-dyB"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="H2O-Re-ReN"/>
+                    <navigationItem key="navigationItem" title="Product List" id="H2O-Re-ReN"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AVb-a2-xfn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
