added the TextView with color

--- a/Final Test MAD 310/Base.lproj/Main.storyboard
+++ b/Final Test MAD 310/Base.lproj/Main.storyboard
@@ -123,29 +123,27 @@
                                 <rect key="frame" x="47" y="88" width="320" height="366.99999999999977"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pCn-6B-Poa">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" usesAttributedText="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fcC-Y1-OSj">
                                 <rect key="frame" x="47" y="462" width="320" height="367"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" name="madGradTextBoxColor"/>
                                 <attributedString key="attributedText">
-                                    <fragment content="I Intend to Further my career as a software developer and hope to improve my skills to become more valuable within the industry">
+                                    <fragment>
+                                        <string key="content">When I graduate I intend to further my career as a software developer and become a valuable asset within the industry. My goal is to never stop learning because then we get complacent. I will always strive to learn as much as I can.</string>
                                         <attributes>
                                             <color key="NSColor" name="textColor" catalog="System" colorSpace="catalog"/>
-                                            <font key="NSFont" metaFont="system" size="17"/>
+                                            <font key="NSFont" size="17" name="Didot-Bold"/>
                                             <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                         </attributes>
                                     </fragment>
                                 </attributedString>
-                                <nil key="highlightedColor"/>
-                            </label>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="djM-dV-aMq"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" title="Future Is Bright" id="XMe-NZ-PTZ"/>
-                    <connections>
-                        <outlet property="madGradText" destination="pCn-6B-Poa" id="RVl-af-Crc"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="t6e-xG-PwF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
